application/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" ## set to true in case want to route all http traffic to https
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.oleksandrozhoh.casa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: prometheus-grafana
            port: 
              number: 80
